fixed minor layout issues for news block

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,13 @@ h1 {
 	position:relative;
 }
 
+h2 {
+	font-size:15px;
+	font-weight:normal;
+	color:#4a4848;
+	margin:0 0 8px;
+}
+
 h4 {
 	font-size:13px;
 	line-height:normal;
